<resources>
    <string name="app_name">Tip Me</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="custom_percent">Custom %</string>
    <string name="fifteen_percent">15%</string>
    <string name="custom_tip_percent">18%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="initial_amount">$0.0</string>
</resources>
