<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:fitsSystemWindows="true"
    android:useDefaultMargins="true"
    tools:context=".MainActivity"
    android:padding="@dimen/horizontal_value"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/amountTextView"
        android:text="@string/amount"
        android:labelFor="@+id/amountEditText"
        style="@style/TitleTextView"/>

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_column="1"
        android:layout_row="0"
        android:digits="0123456789"
        android:maxLength="8">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/amountDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="fill_horizontal"
        android:textColor="@color/color_white"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_eight" />

    <TextView
        android:id="@+id/customTiptextView"
        android:text="@string/custom_percent"
        style="@style/TitleTextView" />

    <SeekBar
        android:id="@+id/tipSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="18"
        android:layout_gravity="fill_horizontal" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_percent"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_tip_percent"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:text="@string/tip"
        style="@style/TitleTextView" />

    <LinearLayout
        android:id="@+id/tipPercentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:id="@+id/percent15TipTextView"
            style="@style/TextView"
            android:layout_marginEnd="@dimen/textview_margin" />

        <TextView
            android:id="@+id/percentCustomTipTextView"
            style="@style/TextView" />
    </LinearLayout>

    <TextView
        android:id="@+id/TotalTextView"
        android:text="@string/total"
        style="@style/TitleTextView" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:id="@+id/total15TextView"
            style="@style/TextView"
            android:layout_marginEnd="@dimen/textview_margin"/>

        <TextView
            android:id="@+id/totalCustomTextView"
            style="@style/TextView" />
    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp" />
</GridLayout>